# diagnostics-utility

./: .coveragerc  .flake8  .gitignore  .pylintrc  CMakeLists.txt  HOW_TO_BUILD_THE_PROJECT-Linux.md  HOW_TO_BUILD_THE_PROJECT-Windows.md  HOW_TO_BUILD_THE_PROJECT.md  HOW_TO_WRITE_CHECKER.md  README.md  diagnostics.py  replace.cmake
checkers_c/: CMakeLists.txt
checkers_c/any_os/: CMakeLists.txt
checkers_c/any_os/gpu_backend_checker/: CMakeLists.txt
checkers_c/any_os/gpu_backend_checker/include/: CLDriverChecker.h  CheckerHelper.h  GpuBackendChecker.h  JsonNode.h  LZDriverChecker.h  Mocks.h  resource.h
checkers_c/any_os/gpu_backend_checker/src/: CLDriverChecker.cpp  CheckerHelper.cpp  GpuBackendChecker.cpp  JsonNode.cpp  LZDriverChecker.cpp  gpu_backend_properties.rc.in  main.cpp
checkers_c/any_os/gpu_backend_checker/tests/: test_gpu_backend_checker.cpp
checkers_c/example_c_checker/: CMakeLists.txt
checkers_c/example_c_checker/src/: example.c
checkers_c/example_c_checker/tests/: test_example.cpp  test_example.robot
checkers_c/gpu_backend_checker/: CMakeLists.txt
checkers_c/gpu_backend_checker/include/: CheckerHelper.h  JsonNode.h
checkers_c/gpu_backend_checker/src/: CLDriverChecker.cpp  CheckerHelper.cpp  JsonNode.cpp  LZDriverChecker.cpp  gpu_backend_checker.cpp
checkers_c/linux/: CMakeLists.txt
checkers_c/linux/common/: CMakeLists.txt
checkers_c/linux/common/include/: CheckerHelper.h  CommonMocks.h  OsUtils.h
checkers_c/linux/common/src/: CheckerHelper.cpp  JsonNode.cpp  OsUtils.cpp
checkers_c/linux/common/tests/: test_checker_helper.cpp
checkers_c/linux/gpu_backend_checker/: CMakeLists.txt
checkers_c/linux/oneapi_checker/: CMakeLists.txt
checkers_c/linux/oneapi_toolkit_checker/: CMakeLists.txt
checkers_c/linux/oneapi_toolkit_checker/include/: AptChecker.h  BInstallerChecker.h  Mocks.h  OneapiToolkitChecker.h  PackageManagerRepository.h  Product.h  RpmChecker.h  Sqlite3Wrapper.h
checkers_c/linux/oneapi_toolkit_checker/src/: AptChecker.cpp  BInstallerChecker.cpp  OneapiToolkitChecker.cpp  PackageManagerRepository.cpp  RpmChecker.cpp  Sqlite3Wrapper.cpp  main.cpp
checkers_c/linux/oneapi_toolkit_checker/tests/: test_apt_checker.cpp  test_b_installer_checker.cpp  test_oneapi_toolkit_checker.cpp  test_package_manager_repository.cpp  test_rpm_checker.cpp
checkers_c/oneapi_checker/: CMakeLists.txt
checkers_c/oneapi_checker/include/: BInstallerChecker.h  CheckerHelper.h  RpmChecker.h
checkers_c/oneapi_checker/src/: AptChecker.cpp  BInstallerChecker.cpp  CheckerHelper.cpp  RpmChecker.cpp  oneapi_checker.cpp
checkers_c/windows/: CMakeLists.txt
checkers_exe/: example_exe_checker.sh  user_limits_checker.sh
checkers_exe/linux/: user_limits_checker.sh
checkers_py/: advisor_checker.py  base_system_checker.py  debugger_checker.py  dependencies_checker.py  example_py_checker_1.py  example_py_checker_2.py  gcc_checker.py  gpu_metrics_checker.py  hangcheck_checker.py  intel_gpu_detector_checker.py  kernel_boot_options_checker.py  oneapi_env_checker.py  oneapi_gpu_checker.py  user_group_checker.py  vtune_checker.py
checkers_py/any_os/: oneapi_env_checker.py
checkers_py/any_os/data/: oneapi_names_map.json
checkers_py/any_os/tests/: test_oneapi_env_checker.py
checkers_py/common/: advisor_vtune_helper.py  debugger_helper.py  gpu_helper.py
checkers_py/linux/: base_system_checker.py  compiler_checker.py  driver_compatibility_checker.py  gcc_checker.py  gpu_metrics_checker.py  hangcheck_checker.py  intel_gpu_detector_checker.py  kernel_options_checker.py  oneapi_env_checker.py  oneapi_gpu_checker.py  user_group_checker.py
checkers_py/oneapi_check_offloads/: parallel-for-1D.cpp  simple-sycl-code.cpp
checkers_py/tests/: test_advisor_checker.py  test_base_system_checker.py  test_debugger_checker.py  test_dependencies_checker.py  test_example_py_checker_1.py  test_example_py_checker_2.py  test_gcc_checker.py  test_gpu_metrics_checker.py  test_hangcheck_checker.py  test_intel_gpu_detector_checker.py  test_kernel_boot_options_checker.py  test_oneapi_env_checker.py  test_oneapi_gpu_checker.py  test_user_group_checker.py  test_vtune_checker.py
checkers_py/windows/: base_system_checker.py  compiler_checker.py  driver_compatibility_checker.py  gpu_metrics_checker.py  intel_gpu_detector_checker.py  oneapi_gpu_checker.py  oneapi_toolkit_checker.py
checkers_samples/: CMakeLists.txt
checkers_samples/c_checker_sample/: CMakeLists.txt
checkers_samples/c_checker_sample/src/: c_sample.c  sample_properties.rc.in
checkers_samples/c_checker_sample/tests/: test_c_sample.cpp
checkers_samples/exe_checkers_samples/linux/: exe_checker_sample.sh
checkers_samples/py_checkers_samples/: py_checker_sample_1.py  py_checker_sample_2.py
checkers_samples/py_checkers_samples/tests/: test_py_checker_sample_1.py  test_py_checker_sample_2.py
configs/: example_config.json
configs/linux/: sample_config.json
configs/windows/: sample_config.json
databases/: compatibility_map.db  metadata.json
databases/src/: compatibility_map.db  create_db.py  oneAPI_compatibility_map_public.xlsx
docs/: .gitignore  cli-options.rst  conf.py  conf_pdfly.py  custom-check.rst  customization.rst  diagnose.rst  filter-checks.rst  group-checks.rst  html  index.rst  notices-and-disclaimers.rst  output.rst  pkg-contents.rst  requirements.txt  select-checks.rst  single-check.rst  troubleshoot.rst  verbosity.rst
include/: checker_interface.h  checker_list_interface.h
licensing/: third-party-programs.txt
modules/: db_downloader.py  files_helper.py  filter.py  log.py  os_helper.py  parse_args.py  select.py
modules/check/: __init__.py  check.py  check_c.py  check_exe.py  check_list.py  check_list_c.py  check_list_py.py  check_loader.py  check_py.py  check_runner.py  ctypes_defs.py  sys_check.py
modules/printing/: __init__.py  check_printer.py  check_table_printer.py  epilog_printer.py  printer.py  printer_helper.py  table_printer.py
modules/tests/: __init__.py  test_files_helper.py  test_filter.py  test_log.py  test_os_helper.py  test_parse_args.py
(+61 files in other folders)
